# asn-telegram-bot

./: .env  .gitignore  data.json  main.py  pyproject.toml  requirements.txt
alembic/versions/: 0c5bd2e9a9ff_initial_commit.py
app/: file_writer.py  utils.py  webscrapper.py
app/commands/: __init__.py  general.py
app/commands/jobs/: __init__.py  erthquake_job.py
app/core/: config.py  db.py  loggin_config.py
app/crud/: earthquake.py
app/models/: __init__.py  base.py  earthquake.py
app/schemas/: earthquake.py
app/services/: earthquake_info.py
app/utils/: general.py
app/utils/queries/: earthquake_queries.py
tests/: test_unofficial_asn_telegram_bot.py
